# Captcha-Fast-Detector

./: .gitignore  README.md  pyproject.toml
artifacts/evaluation/: validation_results.json
artifacts/evaluation/fold_00/: fold_result.json
artifacts/evaluation/fold_01/: fold_result.json
artifacts/evaluation/fold_02/: fold_result.json
artifacts/evaluation/fold_03/: fold_result.json
artifacts/evaluation/fold_04/: fold_result.json
artifacts/evaluation/fold_05/: fold_result.json
artifacts/evaluation/fold_06/: fold_result.json
artifacts/evaluation/fold_07/: fold_result.json
artifacts/roi/: roi.json
artifacts/templates/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  A.txt  B.txt  C.txt  D.txt  E.txt  F.txt  G.txt  H.txt  I.txt  J.txt  K.txt  L.txt  M.txt  O.txt  Q.txt  R.txt  S.txt  T.txt  U.txt  V.txt  W.txt  X.txt  Y.txt  Z.txt  meta.json
captcha_detector/: __init__.py  __main__.py  captcha_detector.py  character_recognizer.py  character_segmenter.py  dataset_organizer.py  evaluation.py  roi_calibrator.py  template_builder.py
data/char_dataset/0/: 0_sample0.txt
data/input_cropped/: input00.txt  input01.txt  input02.txt  input03.txt  input04.txt  input05.txt  input06.txt  input07.txt  input08.txt  input09.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input16.txt  input17.txt  input18.txt  input19.txt  input20.txt  input21.txt  input22.txt  input23.txt  input24.txt
tests/: __init__.py  test_character_segmenter.py  test_dataset_organizer.py  test_detector.py  test_roi_calibrator.py
(+364 files in other folders)
